# mcu

hello_usb/: CMakeLists.txt
lab_1/blink/: blink.c
lab_2/: 2.py  blink_ubs.py
lab_2/blink_usb/: CMakeLists.txt  blink_usb.c
lab_3/: adc_graph.py  hello_adc.py  rc.c  rc.py
lab_3/hello_adc/: CMakeLists.txt  hello_adc.c
lab_4/: bme.py  bme_graph.py
lab_4/bme280_spi/: CMakeLists.txt  bme280_spi.c
lab_5/lcd_module/: CMakeLists.txt  ant-lab.c  ant-lab.h  gradient.c  gradient.h  ili9341.h  lcd_module.c  square-swarm.c  square-swarm.c:Zone.Identifier  text_message.c  text_message.h
lab_6/portable_device/: CMakeLists.txt  bme.c  bme.h  lcd_module.c  portable_device.c
lab_6/portable_device/bme/: CMakeLists.txt
lab_6/portable_device/bme/include/: bme.h
lab_6/portable_device/bme/src/: bme.c
lab_6/portable_device/ili9341/: CMakeLists.txt
lab_6/portable_device/ili9341/src/: ili9341.c
lab_6/portable_device/text_message/: CMakeLists.txt
lab_6/portable_device/text_message/include/: text_message.h
lab_6/portable_device/text_message/src/: text_message.c
sensor/sensor/: CMakeLists.txt  sensor.c
